# hdr-core

./: .gitignore  Cargo.toml
src/: arc_runtime.rs  consts.rs  fs.rs  lib.rs  singletons.rs  utils.rs  vars.rs
src/modules/: anim.rs  buffer.rs  meter.rs  mod.rs  param.rs  var.rs
