[package]
name = "hdr-core"
version = "0.1.0"
authors = ["blu-dev <the.blu.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
skyline = { git = "https://github.com/ultimate-research/skyline-rs" }
skyline_smash = { git = "https://github.com/blu-dev/skyline-smash", features = ["weak_l2cvalue"]}
# smash_script = { git = "https://github.com/blu-dev/smash-script-priv", branch = "proper-scripts" }
smashline = { git = "https://github.com/blu-dev/smashline", branch = "development" }
# smashline = { path = "../../smashline" }
parking_lot = { version = "0.11.1", features = ["nightly"] }
serde_json = "1.0"
lua_bind_hash = "1.0.1" 
lazy_static = "1.4.0"
prc-rs = "1.3"
# smash-arc = { git = "https://github.com/jam1garner/smash-arc", features = [ "smash-runtime", "nozstd"] }
smash-arc = { path = "../../smash-arc", features = [ "smash-runtime", "nozstd" ] }

[features]
default = []
debug = []
no_common_params = []