[package]
name = "hdr-core"
version = "0.1.0"
authors = ["blu-dev <the.blu.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
skyline = { git = "https://github.com/ultimate-research/skyline-rs" }
skyline_smash = { git = "https://github.com/blu-dev/skyline-smash", features = ["weak_l2cvalue"]}
smashline = { git = "https://github.com/blu-dev/smashline", branch = "development" }
parking_lot = { version = "0.11.1", features = ["nightly"] }
serde_json = "1.0"
lazy_static = "1.4.0"
# prc-rs = "1.3"
smash-arc = { git = "https://github.com/jam1garner/smash-arc", features = [ "smash-runtime", "nozstd"] }

[features]
default = []
debug = []
no_common_params = []
